@@ -31,6 +31,7 @@ require "braintree/advanced_search"
 require "braintree/android_pay_card"
 require "braintree/amex_express_checkout_card"
 require "braintree/apple_pay_card"
+require "braintree/authorization_adjustment"
 require "braintree/client_token"
 require "braintree/client_token_gateway"
 require "braintree/coinbase_account"
