@@ -126,6 +126,7 @@ module Braintree
     attr_reader :ideal_payment_details
     attr_reader :visa_checkout_card_details
     attr_reader :masterpass_card_details
+    attr_reader :authorization_adjustments
 
     def self.create(attributes)
       Configuration.gateway.transaction.create(attributes)
@@ -275,6 +276,7 @@ module Braintree
       @ideal_payment_details = IdealPaymentDetails.new(attributes[:ideal_payment]) if attributes[:ideal_payment]
       @visa_checkout_card_details = VisaCheckoutCardDetails.new(attributes[:visa_checkout_card])
       @masterpass_card_details = MasterpassCardDetails.new(attributes[:masterpass_card])
+      authorization_adjustments.map! { |attrs| AuthorizationAdjustment._new(attrs) } if authorization_adjustments
     end
 
     # True if <tt>other</tt> is a Braintree::Transaction with the same id.
